workspace-sf/force-app/main/default/objects/EmailAvisoCarenciaVidaON__c/EmailAvisoCarenciaVidaON__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>configuração criada para parametrização das urls do email de carencia de beneficios do vidaOn</description>
    <label>EmailAvisoCarenciaVidaON</label>
</CustomObject>