workspace-sf/force-app/main/default/objects/EmailAvisoCarenciaVidaON__c/fields/HeaderBeneficios__c.field-meta.xml
<CustomField>
    <fullName>HeaderBeneficios__c</fullName>
    <label>HeaderBeneficios</label>
    <type>Url</type>
</CustomField>