workspace-sf/force-app/main/default/objects/EmailAvisoCarenciaVidaON__c/fields/PortoSeguroIconBeneficios__c.field-meta.xml
<CustomField>
    <fullName>PortoSeguroIconBeneficios__c</fullName>
    <label>Porto Seguro Icon Beneficios</label>
    <type>Url</type>
</CustomField>