workspace-sf/force-app/main/default/objects/EmailAvisoCarenciaVidaON__c/fields/ReparaBeneficio__c.field-meta.xml
<CustomField>
    <fullName>ReparaBeneficio__c</fullName>
    <label>ReparaBeneficio</label>
    <type>Url</type>
</CustomField>