workspace-sf/force-app/main/default/objects/EmailAvisoCarenciaVidaON__c/fields/TeleMedBeneficio__c.field-meta.xml
<CustomField>
    <fullName>TeleMedBeneficio__c</fullName>
    <label>TeleMedBeneficio</label>
    <type>Url</type>
</CustomField>