workspace-sf/force-app/main/default/objects/EmailAvisoCarenciaVidaON__c/fields/ViagemBeneficio__c.field-meta.xml
<CustomField>
    <fullName>ViagemBeneficio__c</fullName>
    <label>ViagemBeneficio</label>
    <type>Url</type>
</CustomField>